# goodday-mcp

./: .env.example  MANIFEST.in  PACKAGE_COMPLETE.md  PYPI_GUIDE.md  README.md  live_search_goodday_tasks.py  main.py  pyproject.toml  test_server.py
goodday_mcp/: main.py
openwebui/: OPENWEBUI_TOOL_README.md  goodday_openwebui_complete_tool.py  live_get_document_content.py  live_get_goodday_project_tasks.py  live_get_goodday_sprint_summary.py  live_get_goodday_sprint_tasks_by_name.py  live_get_goodday_user_tasks.py  live_search_project_documents.py  live_test_goodday_project_tasks.py  n8n-workflow-goodday-vectordb.json
